--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "generate": "nuxi generate",
+    "clean": "rm -rf dist && rm -rf .output",
+    "deploy": "gh-pages -t -d .output/public --nojekyll",
+    "bump": "npm version patch",
+    "open": "open http://michaelpaulukonis.github.io"
   },
   "devDependencies": {
     "@nuxt/content": "^2.5.2",
     "@nuxtjs/tailwindcss": "^6.5.0",
+    "gh-pages": "^6.3.0",
     "nuxt": "^3.2.3",
     "rehype-external-links": "^3.0.0",
     "sass": "^1.85.1"
@@ -17,6 +22,7 @@
   "dependencies": {
     "@vue/language-plugin-pug": "^2.2.4",
     "@vueuse/core": "^9.13.0",
+    "nuxt-content-assets": "^1.4.4",
     "pug": "^3.0.3"
   },
   "packageManager": "yarn@3.3.1+sha256.1d2760eb5c0e525abe9c5306fac5fe0b5628c0955072a0da2f4043524497526a"
